Changed the datatype of the functions field from ArrayList to LinkedList to support more efficient mutability when simplifying the terms of an Addition object